Fix reflection access error